*Version 4.5.1*
* Added support for google G4 tags.
* The chart component override the column header xid to deviceName + pointName when will be export CSV, JSON, XLSX file.
* Fix Select All not Selecting All in dataPointSelector, was remove customizeSort
* Fix bug where published point form validations not working

*Version 4.5.0*
* Upgraded for Mango 4.5.0

*Version 4.4.2*
* Provide revision control on JSON store items

*Version 4.4.1*
* Fix point-value websocket unable to re-open connection if it is closed by server

*Version 4.4.0*
* Upgraded for Mango 4.4.0

*Version 4.3.1*
* Extend/Update point object with runtime point attributes map when websocket message received
* Added bulk edit feature for users

*Version 4.3.0*
* Upgraded for Mango 4.3.0
* Show user count in users page
* Fix mailing lists not removed from the list when deleted
* Fix event handlers not removed from the list when filter applied then deleted
* Fix event detectors not removed from the list via websocket
* Update AngularJS to v1.8.2
* Update yarn/npm dependencies to latest compatible versions
* Added help button to data point selector

*Version 4.2.1*
* Fix where pagination would not get triggered in watchlist builder selected points table
* Allow non-admin users to create reset-password token for users they had permission to edit
* Fix for non-admin users cannot edit other users when Edit own user details system permission is not set
* Fix for non-admin users cannot see permissions inputs when editing own profile
* New users automatically get the same Organization as the creating user

*Version 4.2.0*
* Upgraded for Mango 4.2.0
* Fix for Non Admin User cannot Create new Users because of Missing permissions inputs

*Version 4.1.1*
* Add UI setting to optionally disable the unacknowledged alarms icon in the toolbar

*Version 4.1.0*
* Upgraded for Mango 4.1.0

*Version 4.0.0*
* Changes below here added in 4.0.0-beta.12
* Show module install date on modules page