@@ -759,6 +759,7 @@ ui.app.pointValuePurgeForSelectedPoints=Purge point values for selected data poi
 ui.app.eventPurge=Event purge
 ui.app.purgeUsingSettings=Purge using settings
 ui.app.systemAction.started={0} started, please wait...
+ui.app.systemAction.progress= {0} running, please wait... {1}
 ui.app.systemAction.startFailed={0} failed to start, {1}
 ui.app.systemAction.succeeded={0} succeeded, {1}
 ui.app.systemAction.failed={0} failed, {1}
