@@ -8,29 +8,45 @@ import angular from 'angular';
 SystemActionsFactory.$inject = ['$http', '$q', '$timeout'];
 function SystemActionsFactory($http, $q, $timeout) {
     const systemActionsUrl = '/rest/latest/actions';
-    
+
     function SystemActionResource(data) {
         angular.extend(this, data);
     }
-    
-    SystemActionResource.prototype.refresh = function() {
+
+    SystemActionResource.prototype.refresh = function (onProgress) {
         return $http({
             method: 'GET',
-            url: systemActionsUrl + '/status/' + encodeURIComponent(this.resourceId)
-        }).then(function(response) {
-            return angular.extend(this, response.data);
-        }.bind(this));
+            url: `${systemActionsUrl}/status/${encodeURIComponent(this.resourceId)}`
+        }).then(function (response) {
+                if (typeof onProgress === 'function') onProgress(response.data);
+                return angular.extend(this, response.data);
+            }.bind(this),function (error) {
+                return angular.extend(this, {
+                    finished: true,
+                    results: {
+                        failed: true,
+                        messages: [],
+                        exception: { message: error.mangoStatusText }
+                    }
+                });
+            }.bind(this)
+        );
     };
-    
-    SystemActionResource.prototype.refreshUntilFinished = function(timeout) {
+
+    SystemActionResource.prototype.refreshUntilFinished = function (timeout, onProgress) {
         if (this.finished) return $q.resolve(this);
-        return $timeout(function() {
-            return this.refresh();
-        }.bind(this), timeout || 1000).then(function() {
-            return this.refreshUntilFinished(timeout);
-        }.bind(this));
+        return $timeout(
+            function () {
+                return this.refresh(onProgress);
+            }.bind(this),
+            timeout || 1000
+        ).then(
+            function () {
+                return this.refreshUntilFinished(timeout, onProgress);
+            }.bind(this)
+        );
     };
-    
+
     function SystemActions() {
     }
 
